# cherl

./: .gitignore  Cargo.toml  README.md  git-init.toml  repos.json  security.toml
cherl/: Cargo.toml
cherl-patch-util/: Cargo.toml
cherl-patch-util/src/: lib.rs  patch.rs
cherl-remote-util/: Cargo.toml
cherl-remote-util/src/: downloader.rs  lib.rs  remote.rs
cherl-script-util/: Cargo.toml
cherl-script-util/src/: lib.rs  repos.rs
cherl-util/: Cargo.toml
cherl-util/src/: lib.rs  progress_bar.rs  regex_util.rs  version.rs
cherl-util/src/tests/: mod.rs  regex_util_tests.rs
cherl/src/: main.rs
templates/: git-init.toml
