[workspace]
members = [
    "cherl", "cherl-patch-util",
    "cherl-remote-util"
, "cherl-script-util"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.98"
clap = "4.5.41"
colored = "3.0.0"
serde = "1.0.219"
serde_json = "1.0.141"
serde_toml = "0.0.1"
tokio = "1.46.1"
