[workspace]
members = [
    "cherl", "cherl-patch-util",
    "cherl-remote-util", "cherl-script-util", "cherl-util"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.98"
clap = "4.5.41"
colored = "3.0.0"
tokio = {version = "1.46.1", features = ["full"]}
indicatif = "0.18.0"